v1.0.0/_sources/lcls-plc-crix-vac_PLC_CRIX_VAC_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 172.21.140.47.1.1
      -
    * - Target IP address
      - 172.21.140.47
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _PLC_CRIX_VAC_pragmas:

Pragmas
-------

Total pragmas found: 162
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, 2.4.2
        LCLS Vacuum, SLAC - LCLS, Unset, 2.0.1
        LCLSVacuumSerialDriverLib, SLAC - LCLS, Unset, 1.2.2
        PMPS, SLAC - LCLS, Unset, 2.2.1
        SysDir, System, , 3.5.8.0
        SysFile, System, , 3.5.9.0
        Tc2_DataExchange, Beckhoff Automation GmbH, , 3.3.5.0
        Tc2_EtherCAT, Beckhoff Automation GmbH, , 3.3.15.0
        Tc2_IoFunctions, Beckhoff Automation GmbH, , 3.3.13.0
        Tc2_Math, Beckhoff Automation GmbH, , 3.3.1.0
        Tc2_MC2, Beckhoff Automation GmbH, , 3.3.42.0
        Tc2_ModbusSrv, Beckhoff Automation GmbH, , 3.3.2.0
        Tc2_SerialCom, Beckhoff Automation GmbH, Unset, 3.3.7.0
        Tc2_Standard, Beckhoff Automation GmbH, Unset, 3.3.3.0
        Tc2_System, Beckhoff Automation GmbH, Unset, 3.4.24.0
        Tc2_TcpIp, Beckhoff Automation GmbH, , 3.3.6.0
        Tc2_Utilities, Beckhoff Automation GmbH, , 3.3.41.0
        Tc3_EventLogger, Beckhoff Automation GmbH, , 3.1.24.0
        Tc3_Interfaces, Beckhoff Automation GmbH, , 3.4.3.0
        Tc3_JsonXml, Beckhoff Automation GmbH, , 3.3.14.0
        Tc3_Module, Beckhoff Automation GmbH, Unset, 3.3.21.0
        TcUnit, www.tcunit.org, , 1.1.0.0

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4390112 (32)


Constants
^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 637128568 (8)
        Constants.bLittleEndian, BOOL, 637128552 (8)
        Constants.bSimulationMode, BOOL, 637128560 (8)
        Constants.CompilerVersion, VERSION, 644987072 (64)
        Constants.CompilerVersionNumeric, DWORD, 637392480 (32)
        Constants.gc_GaugeValidState, INT, 634574832 (16)
        Constants.gc_iSizeOfGGOArray, INT, 634574816 (16)
        Constants.nPackMode, UINT, 637215984 (16)
        Constants.nRegisterSize, WORD, 637215968 (16)
        Constants.RuntimeVersion, VERSION, 644987008 (64)
        Constants.RuntimeVersionNumeric, DWORD, 637303392 (32)

.. raw:: html

   </details>
   <br />


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nLangId_OnlineMonitoring, DINT, 4389632 (32)


GVL_ADS_Devices
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ADS_Devices.TM2K2_GCC_01_reader, FB_TGCC_ADS, 636772800 (93504)


GVL_COM
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM.K2S17_E5_CH1_fbSerialLineControl, SerialLineControl, 639150400 (10432)
        GVL_COM.K2S17_E5_CH1_SerialRXBuffer, ComBuffer, 639145376 (2512)
        GVL_COM.K2S17_E5_CH1_SerialTXBuffer, ComBuffer, 639147888 (2512)
        GVL_COM.K2S17_E5_CH1_stComIn, EL6inData22B, 639160832 (192)
        GVL_COM.K2S17_E5_CH1_stComOut, EL6outData22B, 639161024 (192)
        GVL_COM.K2S17_E5_CH2_fbSerialLineControl, SerialLineControl, 639134560 (10432)
        GVL_COM.K2S17_E5_CH2_SerialRXBuffer, ComBuffer, 639129520 (2512)
        GVL_COM.K2S17_E5_CH2_SerialTXBuffer, ComBuffer, 639132032 (2512)
        GVL_COM.K2S17_E5_CH2_stComIn, EL6inData22B, 639144992 (192)
        GVL_COM.K2S17_E5_CH2_stComOut, EL6outData22B, 639145184 (192)


GVL_COM_VLS
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_COM_VLS.VLS_EP1_CH1_fbSerialLineControl, SerialLineControl, 639166240 (10432)
        GVL_COM_VLS.VLS_EP1_CH1_SerialRXBuffer, ComBuffer, 639161216 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_SerialTXBuffer, ComBuffer, 639163728 (2512)
        GVL_COM_VLS.VLS_EP1_CH1_stComIn, EL6inData22B, 639176672 (192)
        GVL_COM_VLS.VLS_EP1_CH1_stComOut, EL6outData22B, 639176864 (192)


GVL_Chamber_Gauges
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>29 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Gauges.CRIX_GCC_01, FB_MKS500, 637303424 (88000)
        GVL_Chamber_Gauges.CRIX_GCC_01.i_iPRESS_R, INT, 637391024 (16)
        GVL_Chamber_Gauges.CRIX_GCC_01.i_xDisc_Active, BOOL, 637391056 (8)
        GVL_Chamber_Gauges.CRIX_GCC_01.i_xHV_ON, BOOL, 637391048 (8)
        GVL_Chamber_Gauges.CRIX_GCC_01.q_xHV_DIS, BOOL, 637391040 (8)
        GVL_Chamber_Gauges.CRIX_GCP_01, FB_972, 637392512 (86080)
        GVL_Chamber_Gauges.CRIX_GCP_01.i_iPRESS_R, INT, 637478544 (16)
        GVL_Chamber_Gauges.CRIX_GCP_02, FB_972, 637479680 (86080)
        GVL_Chamber_Gauges.CRIX_GCP_02.i_iPRESS_R, INT, 637565712 (16)
        GVL_Chamber_Gauges.CRIX_GCP_03, FB_972, 637566848 (86080)
        GVL_Chamber_Gauges.CRIX_GCP_03.i_iPRESS_R, INT, 637652880 (16)
        GVL_Chamber_Gauges.CRIX_GPI_01, FB_MKS275, 636866304 (86336)
        GVL_Chamber_Gauges.CRIX_GPI_01.i_iPRESS_R, INT, 636952384 (16)
        GVL_Chamber_Gauges.CRIX_GPI_02, FB_MKS275, 636953728 (86336)
        GVL_Chamber_Gauges.CRIX_GPI_02.i_iPRESS_R, INT, 637039808 (16)
        GVL_Chamber_Gauges.CRIX_GPI_03, FB_MKS275, 637041152 (86336)
        GVL_Chamber_Gauges.CRIX_GPI_03.i_iPRESS_R, INT, 637127232 (16)
        GVL_Chamber_Gauges.CRIX_GPI_04, FB_MKS275, 637128576 (86336)
        GVL_Chamber_Gauges.CRIX_GPI_04.i_iPRESS_R, INT, 637214656 (16)
        GVL_Chamber_Gauges.CRIX_GPI_05, FB_MKS275, 637216000 (86336)
        GVL_Chamber_Gauges.CRIX_GPI_05.i_iPRESS_R, INT, 637302080 (16)
        GVL_Chamber_Gauges.stCRIX_GCC_01, ST_VG, 637391424 (1056)
        GVL_Chamber_Gauges.stCRIX_GCP_01, ST_VG, 637478592 (1056)
        GVL_Chamber_Gauges.stCRIX_GCP_02, ST_VG, 637565760 (1056)
        GVL_Chamber_Gauges.stCRIX_GPI_01, ST_VG, 636952640 (1056)
        GVL_Chamber_Gauges.stCRIX_GPI_02, ST_VG, 637040064 (1056)
        GVL_Chamber_Gauges.stCRIX_GPI_03, ST_VG, 637127488 (1056)
        GVL_Chamber_Gauges.stCRIX_GPI_04, ST_VG, 637214912 (1056)
        GVL_Chamber_Gauges.stCRIX_GPI_05, ST_VG, 637302336 (1056)

.. raw:: html

   </details>
   <br />


GVL_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>93 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Chamber_Valves.CRIX_VGC_01, FB_VRC, 637652928 (84544)
        GVL_Chamber_Valves.CRIX_VGC_01.i_xClsLS, BOOL, 637737448 (8)
        GVL_Chamber_Valves.CRIX_VGC_01.i_xOpnLS, BOOL, 637737440 (8)
        GVL_Chamber_Valves.CRIX_VGC_01.q_xOPN_DO, BOOL, 637737456 (8)
        GVL_Chamber_Valves.CRIX_VGC_02, FB_VGC_2S, 637738304 (176832)
        GVL_Chamber_Valves.CRIX_VGC_02.i_xClsLS, BOOL, 637914984 (8)
        GVL_Chamber_Valves.CRIX_VGC_02.i_xOpnLS, BOOL, 637914976 (8)
        GVL_Chamber_Valves.CRIX_VGC_02.q_xOPN_DO, BOOL, 637914992 (8)
        GVL_Chamber_Valves.CRIX_VGC_03, FB_VRC, 637918208 (84544)
        GVL_Chamber_Valves.CRIX_VGC_03.i_xClsLS, BOOL, 638002728 (8)
        GVL_Chamber_Valves.CRIX_VGC_03.i_xOpnLS, BOOL, 638002720 (8)
        GVL_Chamber_Valves.CRIX_VGC_03.q_xOPN_DO, BOOL, 638002736 (8)
        GVL_Chamber_Valves.CRIX_VGC_04, FB_VRC, 638003584 (84544)
        GVL_Chamber_Valves.CRIX_VGC_04.i_xClsLS, BOOL, 638088104 (8)
        GVL_Chamber_Valves.CRIX_VGC_04.i_xOpnLS, BOOL, 638088096 (8)
        GVL_Chamber_Valves.CRIX_VGC_04.q_xOPN_DO, BOOL, 638088112 (8)
        GVL_Chamber_Valves.CRIX_VGC_05, FB_VRC, 638088960 (84544)
        GVL_Chamber_Valves.CRIX_VGC_05.i_xClsLS, BOOL, 638173480 (8)
        GVL_Chamber_Valves.CRIX_VGC_05.i_xOpnLS, BOOL, 638173472 (8)
        GVL_Chamber_Valves.CRIX_VGC_05.q_xOPN_DO, BOOL, 638173488 (8)
        GVL_Chamber_Valves.CRIX_VGC_06, FB_VRC, 638174336 (84544)
        GVL_Chamber_Valves.CRIX_VGC_06.i_xClsLS, BOOL, 638258856 (8)
        GVL_Chamber_Valves.CRIX_VGC_06.i_xOpnLS, BOOL, 638258848 (8)
        GVL_Chamber_Valves.CRIX_VGC_06.q_xOPN_DO, BOOL, 638258864 (8)
        GVL_Chamber_Valves.CRIX_VGC_07, FB_VRC, 638259712 (84544)
        GVL_Chamber_Valves.CRIX_VGC_07.i_xClsLS, BOOL, 638344232 (8)
        GVL_Chamber_Valves.CRIX_VGC_07.i_xOpnLS, BOOL, 638344224 (8)
        GVL_Chamber_Valves.CRIX_VGC_07.q_xOPN_DO, BOOL, 638344240 (8)
        GVL_Chamber_Valves.CRIX_VGC_08, FB_VGC, 638345088 (176704)
        GVL_Chamber_Valves.CRIX_VGC_08.i_xClsLS, BOOL, 638521672 (8)
        GVL_Chamber_Valves.CRIX_VGC_08.i_xOpnLS, BOOL, 638521664 (8)
        GVL_Chamber_Valves.CRIX_VGC_08.q_xOPN_DO, BOOL, 638521680 (8)
        GVL_Chamber_Valves.CRIX_VGC_09, FB_VGC, 638521792 (176704)
        GVL_Chamber_Valves.CRIX_VGC_09.i_xClsLS, BOOL, 638698376 (8)
        GVL_Chamber_Valves.CRIX_VGC_09.i_xOpnLS, BOOL, 638698368 (8)
        GVL_Chamber_Valves.CRIX_VGC_09.q_xOPN_DO, BOOL, 638698384 (8)
        GVL_Chamber_Valves.CRIX_VGC_10, FB_VRC_DA, 638698496 (85120)
        GVL_Chamber_Valves.CRIX_VGC_10.i_xClsLS, BOOL, 638783592 (8)
        GVL_Chamber_Valves.CRIX_VGC_10.i_xOpnLS, BOOL, 638783584 (8)
        GVL_Chamber_Valves.CRIX_VGC_10.q_xCLS_DO, BOOL, 638783608 (8)
        GVL_Chamber_Valves.CRIX_VGC_10.q_xOPN_DO, BOOL, 638783600 (8)
        GVL_Chamber_Valves.CRIX_VGC_11, FB_VRC_DA, 638783616 (85120)
        GVL_Chamber_Valves.CRIX_VGC_11.i_xClsLS, BOOL, 638868712 (8)
        GVL_Chamber_Valves.CRIX_VGC_11.i_xOpnLS, BOOL, 638868704 (8)
        GVL_Chamber_Valves.CRIX_VGC_11.q_xCLS_DO, BOOL, 638868728 (8)
        GVL_Chamber_Valves.CRIX_VGC_11.q_xOPN_DO, BOOL, 638868720 (8)
        GVL_Chamber_Valves.CRIX_VGC_12, FB_VRC, 638868736 (84544)
        GVL_Chamber_Valves.CRIX_VGC_12.i_xClsLS, BOOL, 638953256 (8)
        GVL_Chamber_Valves.CRIX_VGC_12.i_xOpnLS, BOOL, 638953248 (8)
        GVL_Chamber_Valves.CRIX_VGC_12.q_xOPN_DO, BOOL, 638953264 (8)
        GVL_Chamber_Valves.CRIX_VGC_13, FB_VRC, 638953280 (84544)
        GVL_Chamber_Valves.CRIX_VGC_13.i_xClsLS, BOOL, 639037800 (8)
        GVL_Chamber_Valves.CRIX_VGC_13.i_xOpnLS, BOOL, 639037792 (8)
        GVL_Chamber_Valves.CRIX_VGC_13.q_xOPN_DO, BOOL, 639037808 (8)
        GVL_Chamber_Valves.CRIX_VGC_17, FB_VRC, 639037824 (84544)
        GVL_Chamber_Valves.CRIX_VGC_17.i_xClsLS, BOOL, 639122344 (8)
        GVL_Chamber_Valves.CRIX_VGC_17.i_xOpnLS, BOOL, 639122336 (8)
        GVL_Chamber_Valves.CRIX_VGC_17.q_xOPN_DO, BOOL, 639122352 (8)
        GVL_Chamber_Valves.CRIX_VVC_01, FB_VVC, 639123200 (640)
        GVL_Chamber_Valves.CRIX_VVC_01.q_xOPN_DO, BOOL, 639123808 (8)
        GVL_Chamber_Valves.CRIX_VVC_02, FB_VVC, 639123904 (640)
        GVL_Chamber_Valves.CRIX_VVC_02.q_xOPN_DO, BOOL, 639124512 (8)
        GVL_Chamber_Valves.CRIX_VVC_03, FB_VVC, 639124608 (640)
        GVL_Chamber_Valves.CRIX_VVC_03.q_xOPN_DO, BOOL, 639125216 (8)
        GVL_Chamber_Valves.CRIX_VVC_04, FB_VVC, 639125312 (640)
        GVL_Chamber_Valves.CRIX_VVC_04.q_xOPN_DO, BOOL, 639125920 (8)
        GVL_Chamber_Valves.CRIX_VVC_05, FB_VVC, 639126016 (640)
        GVL_Chamber_Valves.CRIX_VVC_05.q_xOPN_DO, BOOL, 639126624 (8)
        GVL_Chamber_Valves.CRIX_VVC_06, FB_VVC, 639126720 (640)
        GVL_Chamber_Valves.CRIX_VVC_06.q_xOPN_DO, BOOL, 639127328 (8)
        GVL_Chamber_Valves.CRIX_VVC_07, FB_VVC, 639127424 (640)
        GVL_Chamber_Valves.CRIX_VVC_07.q_xOPN_DO, BOOL, 639128032 (8)
        GVL_Chamber_Valves.CRIX_VVC_09, FB_VVC, 639128128 (640)
        GVL_Chamber_Valves.CRIX_VVC_09.q_xOPN_DO, BOOL, 639128736 (8)
        GVL_Chamber_Valves.CRIX_VVC_10, FB_VVC, 639128832 (640)
        GVL_Chamber_Valves.CRIX_VVC_10.q_xOPN_DO, BOOL, 639129440 (8)
        GVL_Chamber_Valves.stCRIX_VGC_01, ST_VRC, 637737472 (816)
        GVL_Chamber_Valves.stCRIX_VGC_02, ST_VGC_2S, 637915136 (3040)
        GVL_Chamber_Valves.stCRIX_VGC_03, ST_VRC, 638002752 (816)
        GVL_Chamber_Valves.stCRIX_VGC_04, ST_VRC, 638088128 (816)
        GVL_Chamber_Valves.stCRIX_VGC_05, ST_VRC, 638173504 (816)
        GVL_Chamber_Valves.stCRIX_VGC_06, ST_VRC, 638258880 (816)
        GVL_Chamber_Valves.stCRIX_VGC_07, ST_VRC, 638344256 (816)
        GVL_Chamber_Valves.stCRIX_VGC_17, ST_VRC, 639122368 (816)
        GVL_Chamber_Valves.stCRIX_VVC_01, ST_VVC, 639123840 (40)
        GVL_Chamber_Valves.stCRIX_VVC_02, ST_VVC, 639124544 (40)
        GVL_Chamber_Valves.stCRIX_VVC_03, ST_VVC, 639125248 (40)
        GVL_Chamber_Valves.stCRIX_VVC_04, ST_VVC, 639125952 (40)
        GVL_Chamber_Valves.stCRIX_VVC_05, ST_VVC, 639126656 (40)
        GVL_Chamber_Valves.stCRIX_VVC_06, ST_VVC, 639127360 (40)
        GVL_Chamber_Valves.stCRIX_VVC_07, ST_VVC, 639128064 (40)
        GVL_Chamber_Valves.stCRIX_VVC_09, ST_VVC, 639128768 (40)
        GVL_Chamber_Valves.stCRIX_VVC_10, ST_VVC, 639129472 (40)

.. raw:: html

   </details>
   <br />


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4389984 (128)


GVL_LI3K2
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_LI3K2.RIX_LI3K2_PTM_01, FB_PTM_TwisTorr, 639177088 (82688)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xAtSpd, BOOL, 639259752 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.i_xFault, BOOL, 639259760 (8)
        GVL_LI3K2.RIX_LI3K2_PTM_01.q_RunDO, BOOL, 639259768 (8)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (81600)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4178816 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4178848 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Mech_Room
^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>13 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Mech_Room.CRIX_MECH_GPI_01, FB_MKS275, 639344704 (86336)
        GVL_Mech_Room.CRIX_MECH_GPI_01.i_iPRESS_R, INT, 639430784 (16)
        GVL_Mech_Room.CRIX_MECH_PRO_01, FB_EbaraDryPump, 639259776 (83840)
        GVL_Mech_Room.CRIX_MECH_PRO_01.i_xAlarmOK, BOOL, 639343592 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.i_xBPStatus, BOOL, 639343576 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.i_xMPStatus, BOOL, 639343568 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.i_xRemote, BOOL, 639343600 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.i_xWarning, BOOL, 639343584 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.q_xBPStart, BOOL, 639343560 (8)
        GVL_Mech_Room.CRIX_MECH_PRO_01.q_xMPStart, BOOL, 639343552 (8)
        GVL_Mech_Room.CRIX_MECH_VVC_01, FB_VVC, 639344064 (640)
        GVL_Mech_Room.CRIX_MECH_VVC_01.q_xOPN_DO, BOOL, 639344672 (8)
        GVL_Mech_Room.stCRIX_MECH_PRO_01, ST_EbaraDryPump, 639343616 (448)

.. raw:: html

   </details>
   <br />


GVL_PLC_Interfaces
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>11 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PLC_Interfaces.xEcatBridge_External_device_not_connected, BOOL, 635808296 (8)
        GVL_PLC_Interfaces.xEcatBridge_TxPDO_state, BOOL, 635808288 (8)
        GVL_PLC_Interfaces.xEcatBridge_WcState, BOOL, 635808304 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_IN, BOOL, 635808312 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_10_OUT, BOOL, 636772768 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_IN, BOOL, 636772776 (8)
        GVL_PLC_Interfaces.xPTC_MOT_Y_11_OUT, BOOL, 636772784 (8)
        GVL_PLC_Interfaces.xPTC_VGC_10_CLS, BOOL, 636772792 (8)
        GVL_PLC_Interfaces.xPTC_VGC_10_OPN, BOOL, 636953696 (8)
        GVL_PLC_Interfaces.xPTC_VGC_11_CLS, BOOL, 636953704 (8)
        GVL_PLC_Interfaces.xPTC_VGC_11_OPN, BOOL, 636953712 (8)

.. raw:: html

   </details>
   <br />


GVL_PMPS
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PMPS.fbArbiter1, FB_Arbiter, 640420864 (468032)
        GVL_PMPS.g_FastFaultOutput1, FB_HardwareFFOutput, 639431040 (494912)
        GVL_PMPS.g_FastFaultOutput1.q_xFastFaultOut, BOOL, 639431304 (8)
        GVL_PMPS.g_FastFaultOutput2, FB_HardwareFFOutput, 639925952 (494912)
        GVL_PMPS.g_FastFaultOutput2.q_xFastFaultOut, BOOL, 639926216 (8)


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4392576 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4390480 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4390464 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4390448 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4390432 (16)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4390496 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4390488 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4390528 (2048)


GVL_PfeifferParameters
^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_PfeifferParameters.gcMaxPfeifferPumps, INT, 634574960 (16)


GVL_Pumps
^^^^^^^^^

.. raw:: html

   <details>
       <summary>35 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Pumps.CRIX_PTM_01, FB_PTM_TurboDrive, 640888896 (83072)
        GVL_Pumps.CRIX_PTM_01.i_xAtSpd, BOOL, 640971936 (8)
        GVL_Pumps.CRIX_PTM_01.i_xFaultNC, BOOL, 640971944 (8)
        GVL_Pumps.CRIX_PTM_01.q_RunDO, BOOL, 640971952 (8)
        GVL_Pumps.CRIX_PTM_02, FB_PTM_TurboDrive, 640972480 (83072)
        GVL_Pumps.CRIX_PTM_02.i_xAtSpd, BOOL, 641055520 (8)
        GVL_Pumps.CRIX_PTM_02.i_xFaultNC, BOOL, 641055528 (8)
        GVL_Pumps.CRIX_PTM_02.q_RunDO, BOOL, 641055536 (8)
        GVL_Pumps.CRIX_PTM_03, FB_PTM_Pfeiffer, 641056064 (83264)
        GVL_Pumps.CRIX_PTM_03.i_xAtSpd, BOOL, 641139264 (8)
        GVL_Pumps.CRIX_PTM_03.i_xFaultNC, BOOL, 641139272 (8)
        GVL_Pumps.CRIX_PTM_03.i_xRemote, BOOL, 641139288 (8)
        GVL_Pumps.CRIX_PTM_03.i_xWarn, BOOL, 641139280 (8)
        GVL_Pumps.CRIX_PTM_03.q_PumpingStation, BOOL, 641139304 (8)
        GVL_Pumps.CRIX_PTM_03.q_RunDO, BOOL, 641139296 (8)
        GVL_Pumps.CRIX_PTM_03.q_xRemote, BOOL, 641139312 (8)
        GVL_Pumps.CRIX_PTM_03.q_xReset, BOOL, 641139320 (8)
        GVL_Pumps.CRIX_PTM_04, FB_PTM_Pfeiffer, 641963968 (83264)
        GVL_Pumps.CRIX_PTM_04.i_xAtSpd, BOOL, 642047168 (8)
        GVL_Pumps.CRIX_PTM_04.i_xFaultNC, BOOL, 642047176 (8)
        GVL_Pumps.CRIX_PTM_04.i_xRemote, BOOL, 642047192 (8)
        GVL_Pumps.CRIX_PTM_04.i_xWarn, BOOL, 642047184 (8)
        GVL_Pumps.CRIX_PTM_04.q_PumpingStation, BOOL, 642047208 (8)
        GVL_Pumps.CRIX_PTM_04.q_RunDO, BOOL, 642047200 (8)
        GVL_Pumps.CRIX_PTM_04.q_xRemote, BOOL, 642047216 (8)
        GVL_Pumps.CRIX_PTM_04.q_xReset, BOOL, 642047224 (8)
        GVL_Pumps.fb_CRIX_PTM_04_Pfeiffer_PfeifferCom, FB_PFEIFFER_COM, 642073472 (797696)
        GVL_Pumps.fb_PTM_03_PfeifferCom, FB_PFEIFFER_COM, 641166272 (797696)
        GVL_Pumps.st_PTM_03_Pfeiffer_CTRL, ST_PfeifferControl, 641140032 (3200)
        GVL_Pumps.st_PTM_03_Pfeiffer_RBK, ST_PfeifferStatus, 641143232 (23040)
        GVL_Pumps.stCRIX_PTM_01, ST_LeyboldPTM, 640971968 (512)
        GVL_Pumps.stCRIX_PTM_02, ST_LeyboldPTM, 641055552 (512)
        GVL_Pumps.stCRIX_PTM_03, ST_PfeifferPTM, 641139328 (704)
        GVL_Pumps.stCRIX_PTM_04_Pfeiffer_CTRL, ST_PfeifferControl, 642047232 (3200)
        GVL_Pumps.stCRIX_PTM_04_Pfeiffer_RBK, ST_PfeifferStatus, 642050432 (23040)

.. raw:: html

   </details>
   <br />


GVL_Recirculation
^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>21 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Recirculation.CRIX_RCC_GCP_01, FB_972, 643209344 (86080)
        GVL_Recirculation.CRIX_RCC_GCP_01.i_iPRESS_R, INT, 643295376 (16)
        GVL_Recirculation.CRIX_RCC_STC_01, FB_ThermoCouple, 643295424 (192)
        GVL_Recirculation.CRIX_RCC_STC_01.bError, BOOL, 643295560 (8)
        GVL_Recirculation.CRIX_RCC_STC_01.bOverrange, BOOL, 643295576 (8)
        GVL_Recirculation.CRIX_RCC_STC_01.bUnderrange, BOOL, 643295568 (8)
        GVL_Recirculation.CRIX_RCC_STC_01.iRaw, INT, 643295584 (16)
        GVL_Recirculation.CRIX_RCC_VRC_01, FB_VRC_NC_ClsLS, 642871168 (84544)
        GVL_Recirculation.CRIX_RCC_VRC_01.i_xClsLS, BOOL, 642955680 (8)
        GVL_Recirculation.CRIX_RCC_VRC_01.q_xOPN_DO, BOOL, 642955688 (8)
        GVL_Recirculation.CRIX_RCC_VRC_02, FB_VRC, 642955712 (84544)
        GVL_Recirculation.CRIX_RCC_VRC_02.i_xClsLS, BOOL, 643040232 (8)
        GVL_Recirculation.CRIX_RCC_VRC_02.i_xOpnLS, BOOL, 643040224 (8)
        GVL_Recirculation.CRIX_RCC_VRC_02.q_xOPN_DO, BOOL, 643040240 (8)
        GVL_Recirculation.CRIX_RCC_VRC_03, FB_VRC_NC_ClsLS, 643040256 (84544)
        GVL_Recirculation.CRIX_RCC_VRC_03.i_xClsLS, BOOL, 643124768 (8)
        GVL_Recirculation.CRIX_RCC_VRC_03.q_xOPN_DO, BOOL, 643124776 (8)
        GVL_Recirculation.CRIX_RCC_VRC_04, FB_VRC_NC_ClsLS, 643124800 (84544)
        GVL_Recirculation.CRIX_RCC_VRC_04.i_xClsLS, BOOL, 643209312 (8)
        GVL_Recirculation.CRIX_RCC_VRC_04.q_xOPN_DO, BOOL, 643209320 (8)
        GVL_Recirculation.xSystemOverrideMode_RCC, BOOL, 636953720 (8)

.. raw:: html

   </details>
   <br />


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626253664 (8320864)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4392600 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626219584 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626219552 (32)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 626221632 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 626221648 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4392608 (621826944)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626221664 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4392592 (8)


GVL_VLS
^^^^^^^

.. raw:: html

   <details>
       <summary>39 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_VLS.fb_VLS_PfeifferCom, FB_PFEIFFER_COM, 643405120 (797696)
        GVL_VLS.SetupMode_VLS, BOOL, 637041136 (8)
        GVL_VLS.st_VLS_Pfeiffer_CTRL, ST_PfeifferControl, 643378880 (3200)
        GVL_VLS.st_VLS_Pfeiffer_RBK, ST_PfeifferStatus, 643382080 (23040)
        GVL_VLS.VLS_GCC_01, FB_MKS500, 644812288 (88000)
        GVL_VLS.VLS_GCC_01.i_iPRESS_R, INT, 644899888 (16)
        GVL_VLS.VLS_GCC_01.i_xDisc_Active, BOOL, 644899920 (8)
        GVL_VLS.VLS_GCC_01.i_xHV_ON, BOOL, 644899912 (8)
        GVL_VLS.VLS_GCC_01.q_xHV_DIS, BOOL, 644899904 (8)
        GVL_VLS.VLS_GPI_01, FB_MKS275, 644725952 (86336)
        GVL_VLS.VLS_GPI_01.i_iPRESS_R, INT, 644812032 (16)
        GVL_VLS.VLS_PTM_01, FB_PTM_Pfeiffer, 643295616 (83264)
        GVL_VLS.VLS_PTM_01.i_xAtSpd, BOOL, 643378816 (8)
        GVL_VLS.VLS_PTM_01.i_xFaultNC, BOOL, 643378824 (8)
        GVL_VLS.VLS_PTM_01.i_xRemote, BOOL, 643378840 (8)
        GVL_VLS.VLS_PTM_01.i_xWarn, BOOL, 643378832 (8)
        GVL_VLS.VLS_PTM_01.q_PumpingStation, BOOL, 643378856 (8)
        GVL_VLS.VLS_PTM_01.q_RunDO, BOOL, 643378848 (8)
        GVL_VLS.VLS_PTM_01.q_xRemote, BOOL, 643378864 (8)
        GVL_VLS.VLS_PTM_01.q_xReset, BOOL, 643378872 (8)
        GVL_VLS.VLS_PTM_01_xExtIlkOK, BOOL, 637041144 (8)
        GVL_VLS.VLS_ROUGH_GPI, FB_9XX, 644900288 (86720)
        GVL_VLS.VLS_ROUGH_GPI.i_iPRESS_R, INT, 644986928 (16)
        GVL_VLS.VLS_US_GCC, FB_MKS500, 644637952 (88000)
        GVL_VLS.VLS_US_GCC.i_iPRESS_R, INT, 644725552 (16)
        GVL_VLS.VLS_US_GCC.i_xDisc_Active, BOOL, 644725584 (8)
        GVL_VLS.VLS_US_GCC.i_xHV_ON, BOOL, 644725576 (8)
        GVL_VLS.VLS_US_GCC.q_xHV_DIS, BOOL, 644725568 (8)
        GVL_VLS.VLS_US_GPI, FB_MKS275, 644551616 (86336)
        GVL_VLS.VLS_US_GPI.i_iPRESS_R, INT, 644637696 (16)
        GVL_VLS.VLS_VGC_1, FB_VGC, 644202816 (176704)
        GVL_VLS.VLS_VGC_1.i_xClsLS, BOOL, 644379400 (8)
        GVL_VLS.VLS_VGC_1.i_xOpnLS, BOOL, 644379392 (8)
        GVL_VLS.VLS_VGC_1.q_xOPN_DO, BOOL, 644379408 (8)
        GVL_VLS.VLS_VGC_W, FB_VRC_NO_FFO, 644379520 (172096)
        GVL_VLS.VLS_VGC_W.i_xClsLS, BOOL, 644464040 (8)
        GVL_VLS.VLS_VGC_W.i_xOpnLS, BOOL, 644464032 (8)
        GVL_VLS.VLS_VGC_W.q_xCLS_DO, BOOL, 644464048 (8)
        GVL_VLS.xSystemOverrideMode_VLS, BOOL, 637041128 (8)

.. raw:: html

   </details>
   <br />


GVL_Vars
^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Vars.xSystemOverride_ChemRIXS, BOOL, 637041120 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4389280 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4389408 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4389168 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4389440 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>254 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4181120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4181024 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4181056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4180896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4180992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4180832 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4181088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4180864 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4180928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4180960 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4180704 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4180480 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4180608 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4180672 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4180576 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4180736 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4180768 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4180544 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4180512 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4180640 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4180416 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4180800 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4180384 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4180448 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4181152 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4181184 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4182240 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4182176 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4182272 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4182304 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4182336 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4182368 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4182208 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4180272 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4180208 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4180336 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4180048 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4180320 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4180080 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4180032 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4180160 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4180352 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4180176 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4180192 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4180288 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4180064 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4180256 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4180112 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4180144 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4180224 (16)
        Global_Variables.ADSSTATE_START, UINT, 4180096 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4180128 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4180304 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4180240 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4247936 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4247968 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4246672 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4179744 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4179968 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4179984 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4179856 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4179776 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4179840 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4179872 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4179792 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4179808 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4179824 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4179888 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4179904 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4179920 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4179936 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4179952 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4179760 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4180016 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4180000 (16)
        Global_Variables.ASCII_DLE, BYTE, 4389136 (8)
        Global_Variables.ASCII_ETX, BYTE, 4389128 (8)
        Global_Variables.ASCII_NAK, BYTE, 4389144 (8)
        Global_Variables.ASCII_STX, BYTE, 4386904 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4182400 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4180376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4180368 (8)
        Global_Variables.COMERRORADS_INVALID_BAUDRATE, UDINT, 4388032 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTLEN, UDINT, 4387936 (32)
        Global_Variables.COMERRORADS_INVALID_CFGSTVER, UDINT, 4387968 (32)
        Global_Variables.COMERRORADS_INVALID_CMD, UDINT, 4387872 (32)
        Global_Variables.COMERRORADS_INVALID_COMPORT, UDINT, 4387840 (32)
        Global_Variables.COMERRORADS_INVALID_CTS_OUTCTRL, UDINT, 4388224 (32)
        Global_Variables.COMERRORADS_INVALID_DATABITS, UDINT, 4388096 (32)
        Global_Variables.COMERRORADS_INVALID_DATAPOINTER, UDINT, 4387904 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_OUTCTRL, UDINT, 4388256 (32)
        Global_Variables.COMERRORADS_INVALID_DSR_SENS, UDINT, 4388288 (32)
        Global_Variables.COMERRORADS_INVALID_DTR_CTRL, UDINT, 4388160 (32)
        Global_Variables.COMERRORADS_INVALID_PARITY, UDINT, 4388064 (32)
        Global_Variables.COMERRORADS_INVALID_RTS_CTRL, UDINT, 4388192 (32)
        Global_Variables.COMERRORADS_INVALID_STOPBITS, UDINT, 4388128 (32)
        Global_Variables.COMERRORADS_INVALID_TL, UDINT, 4388000 (32)
        Global_Variables.COMERRORADS_NOT_INIT, UDINT, 4388320 (32)
        Global_Variables.COMERRORADS_PORT_CONNECTED, UDINT, 4388384 (32)
        Global_Variables.COMERRORADS_PORT_NOT_CONNECTED, UDINT, 4388416 (32)
        Global_Variables.COMERRORADS_RD_BUFFER_OVERRUN, UDINT, 4388352 (32)
        Global_Variables.COMERRORADS_RD_FAILURE, UDINT, 4388512 (32)
        Global_Variables.COMERRORADS_RD_THREAD_TIMEOUT, UDINT, 4388448 (32)
        Global_Variables.COMERRORADS_SERVER_INCOMPATIBLE, UDINT, 4388576 (32)
        Global_Variables.COMERRORADS_WR_FAILURE, UDINT, 4388544 (32)
        Global_Variables.COMERRORADS_WR_THREAD_TIMEOUT, UDINT, 4388480 (32)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4260896 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4260928 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4267200 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4267168 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4267136 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4267232 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4183072 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634596160 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4384400 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4184664 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4384408 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4384416 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634596096 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4248544 (96)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4386568 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4386272 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4386144 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4246688 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4183056 (16)
        Global_Variables.fbGetCurTaskIdx, GETCURTASKINDEX, 634576032 (128)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4248032 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4248016 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4248048 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4248064 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4248080 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4248384 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4248160 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4248480 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4248256 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4248448 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4248512 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4248096 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4248128 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4248320 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4248224 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4248352 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4248416 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4248288 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4248192 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4182496 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4182560 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4182528 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4182432 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4182592 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4182464 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4248896 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4248640 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4248000 (16)
        Global_Variables.g_DummyVG, ST_VG, 634574976 (1056)
        Global_Variables.g_iSizeOfGGOArray, INT, 634574848 (16)
        Global_Variables.g_stSystem, ST_System, 634574864 (88)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4184672 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4184656 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4184624 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4184640 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4247904 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4246336 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4246368 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4246240 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4246208 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4246176 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4184608 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4246400 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4246528 (16)
        Global_Variables.MAX_RETRIES, INT, 4389152 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4246552 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4246544 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4246664 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4183168 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4246656 (8)
        Global_Variables.nWatchdogTime, BYTE, 4182424 (8)
        Global_Variables.PI, LREAL, 4183104 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4246592 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4246624 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4246560 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4246432 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4181984 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4181344 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4181312 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4246464 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4246496 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4181408 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4181728 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4181696 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4247872 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4181568 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4181376 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4181664 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4181600 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4181440 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4181760 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4181632 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4181504 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4181536 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4181472 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4246272 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4246304 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4181792 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4181216 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4181248 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4181280 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4181856 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4181824 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4181888 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4181952 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4181920 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4182408 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4182416 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4255520 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4255872 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4255456 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4255808 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4255232 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4254384 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4254768 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4255392 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4255744 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4255264 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4255616 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4255328 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4255680 (64)
        Global_Variables.TaskInfo, PlcTaskSystemInfo, 634576192 (1024)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4183040 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4183024 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4182928 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4182864 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4182880 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4182896 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4182848 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4182912 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4182992 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4182944 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4182976 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4183008 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4182960 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634589120 (6976)
        Global_Variables.TIMEOUT_QVZ, TIME, 4389216 (32)
        Global_Variables.TIMEOUT_WVZ, TIME, 4389248 (32)
        Global_Variables.TIMEOUT_ZVZ, TIME, 4389184 (32)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4182112 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4182016 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4182080 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4182048 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4182144 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4255936 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_Tc2_DataExchange, ST_LibVersion, 634596512 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4178880 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4386976 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634596224 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634588832 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4387264 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4387552 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4179168 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4179456 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4184320 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4389696 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4390144 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4183712 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634574528 (288)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


LCLS_Vacuum
^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_Vacuum.Global_Variables.g_stSystem.I_EcatMaster1, AMSNETID, 634574904 (48)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>23 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634581856 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634585344 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634583648 (1696)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634581952 (1696)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634585376 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634581632 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634581760 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634580608 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634587488 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634586464 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634586400 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634585360 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634581664 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634581872 (16)
        PMPS_GVL.PERange, PE_Ranges, 634576160 (32)
        PMPS_GVL.reVHyst, REAL, 634586432 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634581888 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634578912 (1696)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634577216 (1696)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634581824 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634581696 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634588512 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634586416 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634588544 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634588576 (256)


PRG_ADS_Interfaces
^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_ADS_Interfaces.ads_watch_dog, FB_ADS_WATCHDOG, 634640832 (7008)
        PRG_ADS_Interfaces.i_iWatchdog, UDINT, 634640800 (32)


PRG_Chamber_Pumps
^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Pumps.CRIX_PTM_01_ILK_OK, BOOL, 634648992 (8)
        PRG_Chamber_Pumps.CRIX_PTM_02_ILK_OK, BOOL, 634649000 (8)
        PRG_Chamber_Pumps.CRIX_PTM_03_ILK_OK, BOOL, 634649008 (8)
        PRG_Chamber_Pumps.CRIX_PTM_04_ILK_OK, BOOL, 634649016 (8)
        PRG_Chamber_Pumps.fbCRIX_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 635612128 (1504)
        PRG_Chamber_Pumps.fbCRIX_PTM_02_ILK, FB_ChemRIXS_Turbo_ILK, 635613632 (1504)
        PRG_Chamber_Pumps.fbCRIX_PTM_03_ILK, FB_ChemRIXS_Turbo_ILK, 635615136 (1504)


PRG_Chamber_Valves
^^^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>18 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_Chamber_Valves.bChamberAtVac, BOOL, 634647928 (8)
        PRG_Chamber_Valves.bm_dummy_gauge, ST_VG, 634647936 (1056)
        PRG_Chamber_Valves.bRoughPressOK, BOOL, 626221640 (8)
        PRG_Chamber_Valves.bVGC_01_ILK, BOOL, 634574952 (8)
        PRG_Chamber_Valves.bVGC_02_ILK, BOOL, 634647840 (8)
        PRG_Chamber_Valves.bVGC_03_ILK, BOOL, 634647848 (8)
        PRG_Chamber_Valves.bVGC_04_ILK, BOOL, 634647856 (8)
        PRG_Chamber_Valves.bVGC_05_ILK, BOOL, 634647864 (8)
        PRG_Chamber_Valves.bVGC_06_ILK, BOOL, 634647872 (8)
        PRG_Chamber_Valves.bVGC_07_ILK, BOOL, 634647880 (8)
        PRG_Chamber_Valves.bVGC_10_CLS_OK, BOOL, 634647888 (8)
        PRG_Chamber_Valves.bVGC_10_OPN_OK, BOOL, 634647896 (8)
        PRG_Chamber_Valves.bVGC_11_CLS_OK, BOOL, 634647904 (8)
        PRG_Chamber_Valves.bVGC_11_OPN_OK, BOOL, 634647912 (8)
        PRG_Chamber_Valves.bVGC_17_ILK, BOOL, 634647920 (8)
        PRG_Chamber_Valves.dummy_fbArbiter1, FB_Arbiter, 635143936 (468032)
        PRG_Chamber_Valves.dummy_FFFO, FB_HardwareFFOutput, 634649024 (494912)
        PRG_Chamber_Valves.dummy_FFFO.q_xFastFaultOut, BOOL, 634649288 (8)

.. raw:: html

   </details>
   <br />


PRG_MPS
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_MPS.fb_vetoArbiter, FB_VetoArbiter, 635755520 (27104)
        PRG_MPS.fbArbiterIO, FB_SubSysToArbiter_IO, 635617344 (138176)
        PRG_MPS.fbArbiterIO.i_stCurrentBP, ST_BeamParams_IO, 635618144 (1696)
        PRG_MPS.fbArbiterIO.q_stRequestedBP, ST_BeamParams_IO, 635619840 (1696)
        PRG_MPS.fbArbiterIO.xTxPDO_state, BIT, 635621537 (1)
        PRG_MPS.fbArbiterIO.xTxPDO_toggle, BIT, 635621536 (1)
        PRG_MPS.ff2_ff1_link_vac, FB_FastFault, 635782624 (25088)


PRG_RCC
^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_RCC.CRIX_RCC_VRC_01_OPEN_OK, BOOL, 635616648 (8)
        PRG_RCC.CRIX_RCC_VRC_02_OPEN_OK, BOOL, 635616656 (8)
        PRG_RCC.CRIX_RCC_VRC_03_OPEN_OK, BOOL, 635616664 (8)
        PRG_RCC.CRIX_RCC_VRC_04_OPEN_OK, BOOL, 635616672 (8)


PRG_VLS_Turbo
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_Turbo.fbVLS_PTM_01_ILK, FB_ChemRIXS_Turbo_ILK, 636771264 (1504)
        PRG_VLS_Turbo.VLS_PTM_01_xExtIlkOK, BOOL, 635617336 (8)


PRG_VLS_VACUUM
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_VACUUM.bVLS_Ext_Press, BOOL, 635616640 (8)


PRG_VLS_WINDOW
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PRG_VLS_WINDOW.bExtPress, BOOL, 635617312 (8)
        PRG_VLS_WINDOW.bOverride, BOOL, 635617320 (8)
        PRG_VLS_WINDOW.bSetup, BOOL, 635617328 (8)
        PRG_VLS_WINDOW.fbFSInit, R_TRIG, 635808224 (64)
        PRG_VLS_WINDOW.g_FastFaultOutputNA, FB_HardwareFFOutput, 635808320 (494912)
        PRG_VLS_WINDOW.g_FastFaultOutputNA.q_xFastFaultOut, BOOL, 635808584 (8)
        PRG_VLS_WINDOW.g_fbArbiterNA, FB_Arbiter, 636303232 (468032)
        PRG_VLS_WINDOW.state, E_STATES, 635616688 (16)
        PRG_VLS_WINDOW.xFirstPass, BOOL, 635616680 (8)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4389664 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 645037312 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 644987136 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__ComTask, _Implicit_Task_Info, 644992256 (704)
        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 644992960 (704)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 644988160 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 644990208 (2048)
        TwinCAT_SystemInfoVarList._TaskOid_ComTask, OTCID, 637566816 (32)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 639177056 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_ComTask, OTCID, 637479648 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 637918176 (32)


